--- a/src/style/mixins.less
+++ b/src/style/mixins.less
@@ -2,4 +2,4 @@
 @import "./themes/default";
 @import "./mixins/hairline.less";
 @import "./mixins/util.less";
-@import "./mixins/icon.less";
+@import "./mixins/active.less";
